<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/info_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/info_version_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/about_version_num"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/info_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autoLink="web"
            android:text="@string/about_description"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/info_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_source_code"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/info_source_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autoLink="web"
            android:text="@string/about_source_web"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/info_licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_license"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/info_license_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_license_web"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="@dimen/normal_text_size"/>
    </LinearLayout>
</ScrollView>
